force-app/main/default/objects/Group_Class__c/Group_Class__c.object-meta.xml
<CustomObject>
    <description>ECM v1</description>
    <label>Group / Class</label>
    <nameField>
        <label>Group/Class #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groups &amp; Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>