force-app/main/default/objects/Group_Class__c/fields/Active_Enrollments__c.field-meta.xml
<CustomField>
    <fullName>Active_Enrollments__c</fullName>
    <description>Populated by group assignment trigger</description>
    <label>Active Enrollments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>