force-app/main/default/objects/Group_Class__c/fields/Assignments__c.field-meta.xml
<CustomField>
    <fullName>Assignments__c</fullName>
    <inlineHelpText>Count of Group-Class Assignments</inlineHelpText>
    <label>Assignments</label>
    <summaryForeignKey>GroupClass_Assignment__c.Group_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>