force-app/main/default/objects/Group_Class__c/fields/Attended_Group_Class__c.field-meta.xml
<CustomField>
    <fullName>Attended_Group_Class__c</fullName>
    <inlineHelpText>Count of Group/Class Assignments without &apos;Attendance Exception&apos; entered.</inlineHelpText>
    <label>Attended Group/Class</label>
    <summaryFilterItems>
        <field>GroupClass_Assignment__c.Attendance__c</field>
        <operation>notEqual</operation>
        <value>NCNS for Workshop, Reschedule</value>
    </summaryFilterItems>
    <summaryForeignKey>GroupClass_Assignment__c.Group_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>