force-app/main/default/objects/Group_Class__c/fields/Attended_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Attended_Onboarding__c</fullName>
    <label>Attended Onboarding</label>
    <summaryFilterItems>
        <field>GroupClass_Assignment__c.Connects_Attendance__c</field>
        <operation>equals</operation>
        <value>&quot;Attended, Traction Achieved&quot;, &quot;Attended, Follow Up&quot;</value>
    </summaryFilterItems>
    <summaryForeignKey>GroupClass_Assignment__c.Group_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>