force-app/main/default/objects/Group_Class__c/fields/Available__c.field-meta.xml
<CustomField>
    <fullName>Available__c</fullName>
    <formula>Capacity__c -  Assignments__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The difference between Capacity and  Number of Assignments.</inlineHelpText>
    <label>Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>