force-app/main/default/objects/Group_Class__c/fields/Default_Bill_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Bill_Code__c</fullName>
    <inlineHelpText>The default bill code used for creating new units of service in the Group Service Entry page if a bill code is not set on the Case Record for a client.</inlineHelpText>
    <label>Default Bill Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>