force-app/main/default/objects/Group_Class__c/fields/Default_Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Default_Service_Code__c</fullName>
    <inlineHelpText>Default service code used to create new units of service in the Group Service Entry page.</inlineHelpText>
    <label>Default Service Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>