force-app/main/default/objects/Group_Class__c/fields/Did_Not_Attend_Group_Class__c.field-meta.xml
<CustomField>
    <fullName>Did_Not_Attend_Group_Class__c</fullName>
    <label>Did Not Attend Group/Class</label>
    <summaryFilterItems>
        <field>GroupClass_Assignment__c.Attendance__c</field>
        <operation>notEqual</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>GroupClass_Assignment__c.Group_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>