force-app/main/default/objects/Group_Class__c/fields/Did_Not_Attend_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Did_Not_Attend_Onboarding__c</fullName>
    <label>Did Not Attend Onboarding</label>
    <summaryFilterItems>
        <field>GroupClass_Assignment__c.Connects_Attendance__c</field>
        <operation>equals</operation>
        <value>&quot;Scheduled, No Show&quot;, Rescheduled</value>
    </summaryFilterItems>
    <summaryForeignKey>GroupClass_Assignment__c.Group_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>