force-app/main/default/objects/Group_Class__c/fields/Group_Class__c.field-meta.xml
<CustomField>
    <fullName>Group_Class__c</fullName>
    <formula>text(Group_Class_Type__c)&amp;&quot;, &quot;&amp; text(Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group/Class</label>
    <type>Text</type>
</CustomField>