force-app/main/default/objects/Group_Class__c/fields/Group_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Name__c</fullName>
    <label>Group/Class Name</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Group_Class_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ABM Janitorial</fullName>
            </value>
            <value>
                <fullName>ABM Security</fullName>
            </value>
            <value>
                <fullName>Adelante 1:1 Makeup Session</fullName>
            </value>
            <value>
                <fullName>Adelante Computer Basics and Digital Literacy, South Side Campus</fullName>
                <label>Adelante Computer Basics and Digital Literacy</label>
            </value>
            <value>
                <fullName>Adelante Digital Literacy</fullName>
            </value>
            <value>
                <fullName>Adelante Email Basics, South Side Campus</fullName>
                <label>Adelante Email Basics</label>
            </value>
            <value>
                <fullName>Adelante Excel, Pt. 1, South Side Campus</fullName>
                <label>Adelante Excel, Pt. 1</label>
            </value>
            <value>
                <fullName>Adelante Excel, Pt. 2, South Side Campus</fullName>
                <label>Adelante Excel, Pt. 2</label>
            </value>
            <value>
                <fullName>Adelante Excel &amp; Sheets</fullName>
            </value>
            <value>
                <fullName>Adelante Intro to digital literacy</fullName>
                <label>Adelante Intro to Digital Literacy</label>
            </value>
            <value>
                <fullName>Adelante MS Office &amp; Google Suite</fullName>
            </value>
            <value>
                <fullName>Adelante MS Office + Google Suite, Pt. 1, South Side Campus</fullName>
                <label>Adelante MS Office + Google Suite, Pt. 1</label>
            </value>
            <value>
                <fullName>Adelante MS Office + Google Suite, Pt. 2, South Side Campus</fullName>
                <label>Adelante MS Office + Google Suite, Pt. 2</label>
            </value>
            <value>
                <fullName>Adelante Other - please specify</fullName>
            </value>
            <value>
                <fullName>Adelante Outlook and Gmail, South Side Campus</fullName>
                <label>Adelante Outlook and Gmail</label>
            </value>
            <value>
                <fullName>Adelante PowerPoint, Pt. 1, South Side Campus</fullName>
                <label>Adelante PowerPoint, Pt. 1</label>
            </value>
            <value>
                <fullName>Adelante PowerPoint, Pt. 2, South Side Campus</fullName>
                <label>Adelante PowerPoint, Pt. 2</label>
            </value>
            <value>
                <fullName>Adelante PowerPoint, Pt. 3, South Side Campus</fullName>
                <label>Adelante PowerPoint, Pt. 3</label>
            </value>
            <value>
                <fullName>Adelante PowerPoint &amp; Slides</fullName>
            </value>
            <value>
                <fullName>Adelante PowerPoint Presentation, South Side Campus</fullName>
                <label>Adelante PowerPoint Presentation</label>
            </value>
            <value>
                <fullName>Adelante Word &amp; Docs</fullName>
            </value>
            <value>
                <fullName>Advanced Training</fullName>
                <isActive>false</isActive>
                <label>Advanced Training</label>
            </value>
            <value>
                <fullName>Behaviors on the Job</fullName>
            </value>
            <value>
                <fullName>Blogging</fullName>
            </value>
            <value>
                <fullName>BMO Customer Service</fullName>
            </value>
            <value>
                <fullName>Budgeting and Saving</fullName>
            </value>
            <value>
                <fullName>C&amp;W Services</fullName>
            </value>
            <value>
                <fullName>Cara Central Office Hours</fullName>
            </value>
            <value>
                <fullName>Cara Orientation</fullName>
            </value>
            <value>
                <fullName>Cara Orientation Video</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>