force-app/main/default/objects/Group_Class__c/fields/Group_Class_Summary__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Summary__c</fullName>
    <formula>text( Start_Date__c) &amp; &quot; &quot; &amp; 

Case(WEEKDAY(Start_Date__c),
1,&apos;Sunday&apos;,
2,&apos;Monday&apos;,
3,&apos;Tuesday&apos;,
4,&apos;Wednesday&apos;,
5,&apos;Thursday&apos;,
6,&apos;Friday&apos;,
7,&apos;Saturday&apos;, &quot;&quot;)



&amp; &quot;, &quot; &amp; text(Group_Class_Name__c) &amp; &quot;, &quot; &amp; &quot;Time: &quot; &amp; text(Time__c) &amp; &quot;, &quot; &amp; &quot;Location: &quot; &amp; text(Location__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group / Class Summary</label>
    <type>Text</type>
</CustomField>