force-app/main/default/objects/Group_Class__c/fields/Group_Class_Type__c.field-meta.xml
<CustomField>
    <fullName>Group_Class_Type__c</fullName>
    <label>Group/Class Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Foundations Cohort Workshop</fullName>
            </value>
            <value>
                <fullName>Leadership Workshop</fullName>
            </value>
            <value>
                <fullName>Core Training Series</fullName>
            </value>
            <value>
                <fullName>Advanced Training</fullName>
            </value>
            <value>
                <fullName>Branded/Partner Training</fullName>
            </value>
            <value>
                <fullName>Corporate Service Day</fullName>
            </value>
            <value>
                <fullName>Employment Workshop</fullName>
            </value>
            <value>
                <fullName>Employment Video</fullName>
            </value>
            <value>
                <fullName>On-Campus Group</fullName>
            </value>
            <value>
                <fullName>Orientation/Onboarding</fullName>
            </value>
            <value>
                <fullName>Adelante</fullName>
            </value>
            <value>
                <fullName>Cara Accelerator Pathway</fullName>
            </value>
            <value>
                <fullName>Pre-Cohort Workshop</fullName>
            </value>
            <value>
                <fullName>Intro Into Leadership</fullName>
            </value>
            <value>
                <fullName>Leadership - Employment Services Team</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>