force-app/main/default/objects/Group_Class__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Downtown Campus</fullName>
            </value>
            <value>
                <fullName>South Side Campus</fullName>
            </value>
            <value>
                <fullName>Cleanslate</fullName>
            </value>
            <value>
                <fullName>Offsite at Organization&apos;s Facility</fullName>
            </value>
            <value>
                <fullName>Offsite Other</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Northwest Center</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>