force-app/main/default/objects/Group_Class__c/fields/Minimum_Group_Size__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Group_Size__c</fullName>
    <description>Minimum size for group sessions. A warning is presented when logging group attendance if the minimum size is not met.</description>
    <label>Minimum Group Size</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>