force-app/main/default/objects/Group_Class__c/fields/Next_x_Days__c.field-meta.xml
<CustomField>
    <fullName>Next_x_Days__c</fullName>
    <formula>IF(Start_Date__c &gt; today() &amp;&amp; Start_Date__c &lt;= today() + 15 &amp;&amp; NOT(ISBLANK(text(Time__c))), true, false)</formula>
    <label>Next 15 Days</label>
    <type>Checkbox</type>
</CustomField>