force-app/main/default/objects/Group_Class__c/fields/Number_of_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Assignments__c</fullName>
    <inlineHelpText>Number of active group-class assignments</inlineHelpText>
    <label>Number of Assignments</label>
    <summaryFilterItems>
        <field>Group_Class_Session__c.Status__c</field>
        <operation>notEqual</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>Group_Class_Session__c.Group_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>