force-app/main/default/objects/Group_Class__c/fields/Number_of_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Sessions__c</fullName>
    <label>Number of Sessions</label>
    <summaryForeignKey>Group_Class_Session__c.Group_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>