force-app/main/default/objects/Group_Class__c/fields/Partially_Attended_Onboarding__c.field-meta.xml
<CustomField>
    <fullName>Partially_Attended_Onboarding__c</fullName>
    <label>Partially Attended Onboarding</label>
    <summaryFilterItems>
        <field>GroupClass_Assignment__c.Connects_Attendance__c</field>
        <operation>equals</operation>
        <value>&quot;Partially Attended, Follow Up&quot;, &quot;Partially Attended, Opted Out&quot;</value>
    </summaryFilterItems>
    <summaryForeignKey>GroupClass_Assignment__c.Group_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>