force-app/main/default/objects/Group_Class__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Groups can be per service or per program</description>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipName>Groups_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>