force-app/main/default/objects/Group_Class__c/fields/Related_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Related_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related to Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Groups &amp; Classes</relationshipLabel>
    <relationshipName>Groups_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>