force-app/main/default/objects/Group_Class__c/fields/Reoccurrence__c.field-meta.xml
<CustomField>
    <fullName>Reoccurrence__c</fullName>
    <label>Reoccurrence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Once</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Bi-weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Bi-monthly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>