force-app/main/default/objects/Group_Class__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Groups can be per service or per program</description>
    <label>Service</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Service__c.Program__c</field>
            <operation>equals</operation>
            <valueField>$Source.Program__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service__c</referenceTo>
    <relationshipLabel>Groups / Classes related to this Service</relationshipLabel>
    <relationshipName>Groups_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>