force-app/main/default/objects/Group_Class__c/fields/Staff_Trainer__c.field-meta.xml
<CustomField>
    <fullName>Staff_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Trainer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Groups_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>