force-app/main/default/objects/Group_Class__c/fields/Start_Date_Day_of_the_Week__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Day_of_the_Week__c</fullName>
    <formula>if (weekday(Start_Date__c)=1, &quot;Sunday&quot;,
if (weekday(Start_Date__c)=2, &quot;Monday&quot;,
if (weekday(Start_Date__c)=3, &quot;Tuesday&quot;,
if (weekday(Start_Date__c)=4, &quot;Wednesday&quot;,
if (weekday(Start_Date__c)=5, &quot;Thursday&quot;,
if (weekday(Start_Date__c)=6, &quot;Friday&quot;,
if (weekday(Start_Date__c)=7, &quot;Saturday&quot;,
NULL)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Date Day of the Week</label>
    <type>Text</type>
</CustomField>