force-app/main/default/objects/Group_Class__c/fields/Time__c.field-meta.xml
<CustomField>
    <fullName>Time__c</fullName>
    <label>Time</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9:00 AM</fullName>
            </value>
            <value>
                <fullName>1:00 PM</fullName>
            </value>
            <value>
                <fullName>8:40 AM - 12:15 PM</fullName>
            </value>
            <value>
                <fullName>8:40 AM-4:00 PM</fullName>
                <label>8:40 AM - 4:00 PM</label>
            </value>
            <value>
                <fullName>8:45 AM - 12:15 PM</fullName>
            </value>
            <value>
                <fullName>8:45 AM - 5:00 PM</fullName>
            </value>
            <value>
                <fullName>9:00 AM - 10:00 AM</fullName>
            </value>
            <value>
                <fullName>9:00 AM - 10:30 AM</fullName>
            </value>
            <value>
                <fullName>9:00 AM - 11:00 AM</fullName>
            </value>
            <value>
                <fullName>9:00 AM - 12:00 PM</fullName>
            </value>
            <value>
                <fullName>9:00 AM - 1:00 PM</fullName>
            </value>
            <value>
                <fullName>9:00 AM - 5:00 PM</fullName>
            </value>
            <value>
                <fullName>9:15 - 12:15</fullName>
                <label>9:15 AM - 12:15 PM</label>
            </value>
            <value>
                <fullName>9:30 AM - 12:30 PM</fullName>
            </value>
            <value>
                <fullName>10:00 AM - 12:00 PM</fullName>
            </value>
            <value>
                <fullName>11:00 AM - 12:30 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM - 2:00 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM - 2:30 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM - 3:00 PM</fullName>
            </value>
            <value>
                <fullName>1:00 PM - 4:00 PM</fullName>
            </value>
            <value>
                <fullName>2:00 PM - 3:00 PM</fullName>
            </value>
            <value>
                <fullName>3:00 PM - 4:00 PM</fullName>
            </value>
            <value>
                <fullName>3:00 PM - 4:30 PM</fullName>
            </value>
            <value>
                <fullName>3:00 PM - 5:00 PM</fullName>
            </value>
            <value>
                <fullName>Varied</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>