force-app/main/default/objects/Group_Class__c/fields/Timing_Status__c.field-meta.xml
<CustomField>
    <fullName>Timing_Status__c</fullName>
    <formula>if (Start_Date__c &lt; today(), &quot;Past&quot;, &quot;Future&quot;)</formula>
    <label>Timing Status</label>
    <type>Text</type>
</CustomField>