force-app/main/default/objects/Group_Class__c/fields/Total_Assignments__c.field-meta.xml
<CustomField>
    <fullName>Total_Assignments__c</fullName>
    <description>Populated by group assignment trigger</description>
    <label>Total Assignments</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>