force-app/main/default/objects/Group_Class__c/fields/Total_Sessions_Planned__c.field-meta.xml
<CustomField>
    <fullName>Total_Sessions_Planned__c</fullName>
    <label>Total Sessions Planned</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>