force-app/main/default/objects/Group_Class__c/fields/Type_of_Client__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Client__c</fullName>
    <inlineHelpText>Determines what types of clients can be searched for when adding clients via the Add Clients button located on the Group / Class detail page.</inlineHelpText>
    <label>Type of Client</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Enrolled Clients</fullName>
                <default>true</default>
                <label>Enrolled Clients</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>