force-app/main/default/objects/Group_Class__c/fields/Unduplicated_ID__c.field-meta.xml
<CustomField>
    <fullName>Unduplicated_ID__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unduplicated ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>