force-app/main/default/objects/Group_Class__c/recordTypes/Cleanslate_Orientation.recordType-meta.xml
<RecordType>
    <fullName>Cleanslate_Orientation</fullName>
    <active>true</active>
    <label>Orientation Group/Class</label>
</RecordType>