force-app/main/default/objects/Group_Class__c/recordTypes/Non_Series_Group_Class.recordType-meta.xml
<RecordType>
    <fullName>Non_Series_Group_Class</fullName>
    <active>true</active>
    <description>A group or class that is fully offered in one session, on one day. The majority of Digital Literacy, Employment, and Financial Workshops fall into this category.</description>
    <label>Non-Series Group/Class</label>
</RecordType>