force-app/main/default/objects/Group_Class__c/recordTypes/OrientationOnboarding.recordType-meta.xml
<RecordType>
    <fullName>OrientationOnboarding</fullName>
    <active>true</active>
    <label>Connects Onboarding</label>
</RecordType>