force-app/main/default/objects/Group_Class__c/recordTypes/Series_Group_Class.recordType-meta.xml
<RecordType>
    <fullName>Series_Group_Class</fullName>
    <active>true</active>
    <description>A group or class that is offered over multiple sessions, typically over more than one day. Most branded trainings fall into this category.</description>
    <label>Series Group/Class</label>
</RecordType>