force-app/main/default/objects/Group_Class__c/listViews/All_Classes.listView-meta.xml
<ListView>
    <fullName>All_Classes</fullName>
    <columns>NAME</columns>
    <columns>Group_Class_Name__c</columns>
    <columns>Group_Class_Type__c</columns>
    <columns>Included_in_Weekly_Email__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Time__c</columns>
    <columns>Location__c</columns>
    <columns>Staff_Trainer__c</columns>
    <columns>Assignments__c</columns>
    <columns>Attended_Group_Class__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>6/30/2023</value>
    </filters>
    <label>All Classes</label>
</ListView>