force-app/main/default/objects/Group_Class__c/listViews/Cleanslate_Worker_Request_Lists.listView-meta.xml
<ListView>
    <fullName>Cleanslate_Worker_Request_Lists</fullName>
    <columns>NAME</columns>
    <columns>Group_Class_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Time__c</columns>
    <columns>Assignments__c</columns>
    <columns>Location__c</columns>
    <columns>Staff_Trainer__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Group_Class__c.Non_Series_Group_Class</value>
    </filters>
    <filters>
        <field>Group_Class_Name__c</field>
        <operation>equals</operation>
        <value>Cleanslate Worker Request List</value>
    </filters>
    <label>Cleanslate Worker Request Lists</label>
    <language>en_US</language>
</ListView>