force-app/main/default/objects/Group_Class__c/listViews/Employment_Videos.listView-meta.xml
<ListView>
    <fullName>Employment_Videos</fullName>
    <columns>NAME</columns>
    <columns>Group_Class_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Time__c</columns>
    <columns>Location__c</columns>
    <columns>Staff_Trainer__c</columns>
    <columns>Assignments__c</columns>
    <columns>Attended_Group_Class__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Group_Class__c.Non_Series_Group_Class</value>
    </filters>
    <filters>
        <field>Group_Class_Type__c</field>
        <operation>equals</operation>
        <value>Employment Video</value>
    </filters>
    <label>Employment Videos</label>
    <language>en_US</language>
</ListView>