force-app/main/default/objects/Group_Class__c/listViews/Leadership_Workshops.listView-meta.xml
<ListView>
    <fullName>Leadership_Workshops</fullName>
    <columns>NAME</columns>
    <columns>Group_Class_Type__c</columns>
    <columns>Group_Class_Name__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Time__c</columns>
    <columns>Location__c</columns>
    <columns>Assignments__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Program__c</columns>
    <columns>Service__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group_Class_Type__c</field>
        <operation>equals</operation>
        <value>Leadership Workshop</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Group_Class__c.Non_Series_Group_Class</value>
    </filters>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>Group_Class_Name__c</field>
        <operation>notEqual</operation>
        <value>Rebuild</value>
    </filters>
    <label>Upcoming Leadership Workshops</label>
    <language>en_US</language>
</ListView>