force-app/main/default/objects/Group_Class__c/listViews/Orientation.listView-meta.xml
<ListView>
    <fullName>Orientation</fullName>
    <columns>NAME</columns>
    <columns>Start_Date__c</columns>
    <columns>Staff_Trainer__c</columns>
    <columns>Assignments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group_Class_Name__c</field>
        <operation>equals</operation>
        <value>Orientation</value>
    </filters>
    <label>Orientation</label>
</ListView>